[package]
name = "advent-of-code-2024"
version = "0.1.0"
edition = "2021"

[dependencies]
array2d = { git = "https://github.com/klevente/array2d" }
itertools = "0.13"
phf = { version = "0.11.2", features = ["macros"] }
sscanf = "0.4.2"
regex = "1.11.1"

[[bin]]
name = "day1"
path = "src/day1.rs"

[[bin]]
name = "day2"
path = "src/day2.rs"

[[bin]]
name = "day3"
path = "src/day3.rs"
